<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SplineFragment">

    <com.arvatel.photoeditor.algorithms.SplinesCustomView
        android:id="@+id/splinesIV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorOrange"
        app:layout_constraintBottom_toTopOf="@+id/toolsSpline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/toolsSpline"
        style="@style/ToolBarStyle"
        app:layout_constraintBottom_toTopOf="@id/toolBarSpline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonLineSpline"
            style="@style/ButtonsLight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/line" />

        <Button
            android:id="@+id/buttonCubicSpline"
            style="@style/ButtonsLight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cubic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolBarSpline"
        style="@style/ToolBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCancelSpline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/ButtonsDark"/>

        <Button
            android:id="@+id/buttonCleanSpline"
            style="@style/ButtonsLight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clean" />

        <Button
            android:id="@+id/buttonApplySpline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/apply"
            style="@style/ButtonsDark"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>