<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/textChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/choose_your_way"
        android:textColor="@color/colorOrange"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPhotoEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_editor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textChoose"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/buttonSplineLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spline_lines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPhotoEditor"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/buttonCube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSplineLines"
        android:layout_marginTop="70dp" />


</androidx.constraintlayout.widget.ConstraintLayout>