<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindShapesFragment">

    <ImageView
        android:id="@+id/shoeImageFindShapes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ShowPhotoStyle"
        app:layout_constraintBottom_toTopOf="@id/toolsFindShapes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/toolBarFindShapes"
        android:orientation="horizontal"
        style="@style/ToolBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCancelFindShapes"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/ButtonsDark"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonApplyFindShapes"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/ButtonsDark"
            android:text="@string/apply" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolsFindShapes"
        android:orientation="horizontal"
        style="@style/ToolBarStyle"
        app:layout_constraintBottom_toTopOf="@id/toolBarFindShapes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonFindBasicShapes"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/ButtonsLight"
            android:text="@string/find_basic_shapes" />

        <Button
            android:id="@+id/buttonFindFaces"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/ButtonsLight"
            android:text="@string/find_faces" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>