<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageRotationFragment">

    <ImageView
        android:id="@+id/showImageRotate"
        style="@style/ShowPhotoStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rotationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/rotationBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:max="90"
        android:progress="45"
        style="@style/SeekBarStyle"
        app:layout_constraintBottom_toTopOf="@+id/toolBarRotation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/toolBarRotation"
        style="@style/ToolBarStyle"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/ButtonsDark"/>

        <Button
            android:id="@+id/buttonRotate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rotate"
            style="@style/ButtonsLight"/>

        <Button
            android:id="@+id/buttonApply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/apply"
            style="@style/ButtonsDark"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarRotation"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:visibility="gone"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/showImageRotate"
        app:layout_constraintEnd_toEndOf="@+id/showImageRotate"
        app:layout_constraintStart_toStartOf="@+id/showImageRotate"
        app:layout_constraintTop_toTopOf="@+id/showImageRotate" />


</androidx.constraintlayout.widget.ConstraintLayout>